# YARM

./: .gitignore  AARCH64_BOOT_BRINGUP_PR_PLAN.md  ABI_CONTRACT_FREEZE.md  ARCH_SPLIT.md  BOOT_QEMU_RUNBOOK.md  CORE_PROFILE.md  Cargo.toml  DEVFS_CONTRACT.md  DRIVER_PROTOCOL.md  HAL_CONFORMANCE.md  INITRAMFS_CONTRACT.md  INITRAMFS_EXEC_MANIFEST_CONTRACT.md  INIT_SERVER_BOOT_CONTRACT.md  INIT_SERVER_INITRAMFS_BOOT_PR_BOARD.md  IPC_FRAGMENTATION_POLICY.md  IPC_IMPROVEMENT_PHASES.md  IPC_SHARED_MEMORY_FASTPATH_PLAN.md  KERNEL_CSPACE_ACCESS_POLICY.md  KERNEL_MULTITHREADING_DESIGN.md  KERNEL_SCALING_PROFILE.md  KERNEL_STATE_PARTITION_PLAN.md  KERNEL_STATUS.md  LIBC_ABI_X86_64_NONE.md  LICENSE  LINUX_COMPAT.md  MICROKERNEL_BOUNDARY.md  MUSL_POSIX_IPC_MAPPING.md  NEXT_STEPS_1_5_STATUS.md  P2_10_CHECKLIST.md  P2_8_P2_9_CHECKLIST.md  PHASE1_PAYLOAD_POLICY.md  PHASE2_DRIVER_CONTRACT.md  PHASE3_NETWORK_CONTRACT.md  PHASE4_CALL_REPLY_CAP_PLAN.md  PHASE4_UI_CONTRACT.md  PHASE6_EXIT_GATE_REPORT.md  PHASE6_SERVICE_MIGRATION_MATRIX.md  PHASE_READINESS_MATRIX.md  PROC_VFS_CODEC_FREEZE.md  QEMU_BUSYBOX_BOOT_CHECKLIST.md  (+15 more)
.cargo/: config.toml
crates/yarm-compat-servers/: Cargo.toml
crates/yarm-compat-servers/src/: lib.rs
crates/yarm-compat-servers/src/posix_compat/: mod.rs  service.rs  sim.rs  sysdeps.rs
crates/yarm-compat-servers/src/posix_compat/sysdeps/: kernel_hooks.rs  musl_startup.rs  service_hooks.rs
crates/yarm-control-plane-servers/: Cargo.toml
crates/yarm-control-plane-servers/src/: lib.rs
crates/yarm-control-plane-servers/src/control_plane/: driver_manager.rs  ipc_roundtrip.rs  mod.rs
crates/yarm-control-plane-servers/src/control_plane/driver_manager/: fake_fdt.rs  mod.rs  service.rs
crates/yarm-control-plane-servers/src/control_plane/init/: mod.rs  service.rs
crates/yarm-control-plane-servers/src/control_plane/init/core/: launch.rs  mod.rs  mount.rs  policy.rs
crates/yarm-control-plane-servers/src/control_plane/process_manager/: mod.rs  restart_abi_review.rs  service.rs
crates/yarm-control-plane-servers/src/control_plane/supervisor/: mod.rs  restart_model.rs  service.rs
crates/yarm-control-plane-servers/src/control_plane/vfs/: fd_table.rs  mod.rs  mount_table.rs  path.rs  service.rs
crates/yarm-control-plane-servers/tests/: spawn_v5_startup_config.rs
crates/yarm-driver-servers/: Cargo.toml
crates/yarm-driver-servers/src/: lib.rs
crates/yarm-driver-servers/src/drivers/: mod.rs
crates/yarm-driver-servers/src/drivers/blkcache/: mod.rs  service.rs
crates/yarm-driver-servers/src/drivers/firmware/: mod.rs
crates/yarm-driver-servers/src/drivers/firmware/rpi/: client.rs  mod.rs  service.rs  transport.rs
crates/yarm-driver-servers/src/drivers/gpio/: mod.rs
crates/yarm-driver-servers/src/drivers/input/: service.rs
crates/yarm-driver-servers/src/drivers/irqmux/: service.rs
crates/yarm-driver-servers/src/drivers/mailbox/: client.rs  mod.rs  service.rs  transport.rs
crates/yarm-driver-servers/src/drivers/rp1_gpio/: audit.rs  device.rs  mod.rs  regs.rs  service.rs
crates/yarm-driver-servers/src/drivers/uart/: audit.rs  device.rs  mod.rs  service.rs
crates/yarm-driver-servers/src/drivers/uart/backend/: mod.rs
crates/yarm-driver-servers/src/drivers/uart/backend/pl011/: device.rs  mod.rs  regs.rs
crates/yarm-driver-servers/src/drivers/virtio_blk/: device.rs  mod.rs  service.rs
crates/yarm-driver-servers/src/drivers/virtio_blk/backend/: mod.rs
crates/yarm-driver-servers/src/drivers/virtio_blk/backend/virtio/: device.rs  mod.rs
crates/yarm-driver-servers/src/drivers/virtio_gpu/: service.rs
crates/yarm-driver-servers/src/drivers/virtio_net/: service.rs
crates/yarm-fs-servers/: Cargo.toml
crates/yarm-fs-servers/src/: lib.rs
crates/yarm-fs-servers/src/fs/: mod.rs
crates/yarm-fs-servers/src/fs/blkcache/: mod.rs  service.rs
crates/yarm-fs-servers/src/fs/common/: fs.rs  mod.rs  service.rs  shared_io_adapter.rs  shared_io_lifecycle.rs  vfs_ipc.rs  vfs_service.rs
crates/yarm-fs-servers/src/fs/devfs/: mod.rs  nodes.rs  service.rs
crates/yarm-fs-servers/src/fs/ext4/: dir.rs  file.rs  fs.rs  mod.rs  service.rs
crates/yarm-fs-servers/src/fs/fat/: fs.rs  service.rs
crates/yarm-fs-servers/src/fs/initramfs/: archive.rs  manifest.rs  mod.rs  service.rs  service_manifest.rs
crates/yarm-fs-servers/src/fs/ramfs/: mod.rs  service.rs  tree.rs
crates/yarm-fs-servers/tests/: ext4_real_image_probe.rs
crates/yarm-network-servers/: Cargo.toml
crates/yarm-network-servers/src/: lib.rs
crates/yarm-network-servers/src/network/: mod.rs
crates/yarm-network-servers/src/network/dhcp/: service.rs
crates/yarm-network-servers/src/network/dns/: service.rs
crates/yarm-network-servers/src/network/netmgr/: service.rs
crates/yarm-network-servers/src/network/socket/: service.rs
crates/yarm-network-servers/src/network/tcpip/: mod.rs  netmgr_resolver.rs  service.rs
crates/yarm-runtime-tools/: Cargo.toml
crates/yarm-runtime-tools/src/: dtb_probe.rs  lib.rs
crates/yarm-server-runtime/: Cargo.toml
crates/yarm-server-runtime/src/: lib.rs
crates/yarm-ui-servers/: Cargo.toml
crates/yarm-ui-servers/src/: lib.rs
crates/yarm-ui-servers/src/ui/: mod.rs
crates/yarm-ui-servers/src/ui/compositor/: service.rs
crates/yarm-ui-servers/src/ui/display/: service.rs
crates/yarm-ui-servers/src/ui/shell/: service.rs
doc/: AARCH64_IPC_VFS_PM_STATUS_2026_05.md  ABI_CONTRACT_FREEZE.md  AGENTS.md  AI_AGENT_RULES.md  ARCH_AARCH64.md  ARCH_RISCV64.md  ARCH_SPLIT.md  ARCH_X86_64.md  BLKCACHE_ABI.md  BLOCK_BACKEND_ABI.md  BLOCK_WRITE_CONTRACT.md  BOOT.md  BOOT_COMMAND_LINE.md  BOOT_MEMORY_LAYOUT.md  BOOT_QEMU_RUNBOOK.md  CAPABILITY_DOMAIN_RULES.md  CAPABILITY_MODEL.md  CAPABILITY_RIGHTS_AUDIT.md  CONTROL_PLANE_BOUNDARIES.md  DECOMPOSITION_SCAFFOLD_STATUS.md  DEVFS_CONTRACT.md  DHCP_SERVER_CONTRACT.md  DNS_SERVER_CONTRACT.md  DOCUMENTATION_MAP.md  DRIVER_PROTOCOL.md  EXT4_SERVER_CONTRACT.md  FAT_SERVER_CONTRACT.md  FILESYSTEM_AND_STORAGE_CONTRACTS.md  FIRST_COHORT_RETIREMENT_SEAL.md  FREESTANDING_SERVICE_ISOLATION_PR_PLAN.md  HAL_CONFORMANCE.md  IPC.md  (+107 more)
(+453 files in other folders)
