# SPDX-License-Identifier: Apache-2.0

[package]
name = "yarm"
version = "0.1.0"
edition = "2024"
autobins = false

[workspace]
members = [
    ".",
    "crates/yarm-ipc-abi",
    "crates/yarm-srv-common",
    "crates/yarm-kernel",
    "crates/yarm-control-plane-servers",
    "crates/yarm-fs-servers",
    "crates/yarm-network-servers",
    "crates/yarm-driver-servers",
    "crates/yarm-ui-servers",
    "crates/yarm-compat-servers",
    "crates/yarm-runtime-tools",
    "crates/yarm-server-runtime",
    "crates/yarm-freestanding-alloc",
    "crates/yarm-user-rt",
]
resolver = "2"

[features]
default = ["hosted-dev"]
hosted-dev = []
posix-compat = []
linux-compat = ["posix-compat"]
trace_boot_vm = []
trace_frame_alloc = []
legacy-tests = []
rpi5-stage1 = []
rpi5-highhalf = ["rpi5-stage1"]
# Opt-in for the RISC-V S-mode timer-interrupt enable path. Default OFF.
# When enabled, the kernel-idle terminal point will program a one-shot
# SBI Timer deadline, set sie.STIE, and set sstatus.SIE — but only after
# the trap-bridge re-entrancy audit has been completed on a CI runner
# with live QEMU. The feature gate exists so the scaffold can be merged
# without flipping live IRQ delivery in default builds.
riscv64-timer-irq = []
# Stage 198E3C1: compile-time gate for the x86_64 DIRECT shared-region live-oracle marker paths
# (kernel attestations + `IpcSendSharedRegionDirect` retirement literals). OFF by default so a
# NORMAL artifact is marker-clean (contains none of the shared-region marker literals). Enabling the
# feature only COMPILES the marker paths; the runtime selector
# (`yarm.x86_64_shared_region_direct_oracle=1`) is still required to execute the oracle — the feature
# alone activates no runtime behavior. x86_64-only; never enables the queued class or any non-x86 arch.
#
# Stage 198E3C2B: `shared-region-direct-oracle` is the ARCH-NEUTRAL umbrella that compiles the shared
# kernel logic (provisioning, authoritative ack, direct producer gate). Each per-arch feature enables
# it AND gates that arch's marker literals + boot caller. Marker literals are additionally
# `target_arch`-gated so the AArch64 feature never activates x86 markers (and vice versa).
shared-region-direct-oracle = []
x86-shared-region-direct-oracle = ["shared-region-direct-oracle"]
aarch64-shared-region-direct-oracle = ["shared-region-direct-oracle"]
riscv-shared-region-direct-oracle = ["shared-region-direct-oracle"]

# Stage 199A2B4/199A2C1: compile-time gate for the DIRECT IpcCall/IpcReply live round-trip oracle
# (kernel success attestations + `IpcCallDirectRequest`/`IpcReplyDirect` retirement literals + the
# transactional provisioning + the arch-neutral userspace round-trip core). OFF by default so a
# NORMAL artifact is marker-clean (contains neither class literal). `ipccall-direct-oracle` is the
# ARCH-NEUTRAL umbrella that compiles the shared kernel logic; each per-arch feature enables it AND
# gates that arch's marker literals + boot caller (the marker literals are additionally
# `target_arch`-gated so the AArch64 feature never activates x86 markers, and vice versa). Enabling
# a feature only COMPILES the marker paths; the runtime selector (`yarm.<arch>_ipccall_direct_oracle
# =1`) is still required to execute the oracle. Enables NO queued class, timeout, notification, or
# server-death wake.
ipccall-direct-oracle = []
x86-ipccall-direct-oracle = ["ipccall-direct-oracle"]
aarch64-ipccall-direct-oracle = ["ipccall-direct-oracle"]
riscv-ipccall-direct-oracle = ["ipccall-direct-oracle"]

[dependencies]
yarm-ipc-abi = { path = "crates/yarm-ipc-abi" }
yarm-kernel = { path = "crates/yarm-kernel" }
yarm-srv-common = { path = "crates/yarm-srv-common" }

[[bin]]
name = "kernel_boot"
path = "src/bin/kernel_boot.rs"

[profile.dev]
panic = "abort"

[profile.x86-none]
inherits = "release"
panic = "abort"
lto = "thin"

[profile.aarch64-none]
inherits = "release"
panic = "abort"
lto = "thin"
