# SPDX-License-Identifier: Apache-2.0

[package]
name = "yarm-compat-servers"
version = "0.1.0"
edition = "2024"
autobins = false

[features]
default = ["hosted-dev"]
hosted-dev = []
posix-compat = ["yarm-server-runtime/posix-compat"]

[dependencies]
yarm-server-runtime = { path = "../yarm-server-runtime", default-features = false, features = ["hosted-dev"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "posix_compat_srv"
path = "src/bin/posix_compat_srv.rs"
required-features = ["hosted-dev", "posix-compat"]
