# SPDX-License-Identifier: Apache-2.0

[package]
name = "yarm-compat-servers"
version = "0.1.0"
edition = "2024"
autobins = false

[features]
default = ["hosted-dev"]
hosted-dev = []
posix-compat = ["yarm-server-runtime/posix-compat"]

[dependencies]
yarm-ipc-abi = { path = "../yarm-ipc-abi" }
yarm-user-rt = { path = "../yarm-user-rt" }
yarm-server-runtime = { path = "../yarm-server-runtime", default-features = false }

[lib]
path = "src/lib.rs"

[[bin]]
name = "posix_compat_srv"
path = "src/bin/posix_compat_srv.rs"
required-features = ["posix-compat"]
