# SPDX-License-Identifier: Apache-2.0

[package]
name = "yarm-control-plane-servers"
version = "0.1.0"
edition = "2024"
autobins = false

[features]
default = ["hosted-dev"]
hosted-dev = ["yarm/hosted-dev"]
legacy-tests = []

[dependencies]
yarm = { package = "yarm-server-runtime", path = "../yarm-server-runtime", default-features = false }
yarm-fs-servers = { path = "../yarm-fs-servers", default-features = false }
yarm-ipc-abi = { path = "../yarm-ipc-abi" }
yarm-srv-common = { path = "../yarm-srv-common" }
yarm-user-rt = { path = "../yarm-user-rt" }

[lib]
path = "src/lib.rs"
# Intentionally disable lib-test target compilation for now.
#
# Legacy `#[cfg(test)]` control-plane branches still depend on removed
# kernel/std-era APIs that are no longer exported through
# `yarm-server-runtime`. Re-enabling lib tests currently causes
# `--all-targets` workspace compile failures without affecting production
# binaries.
#
# Production surfaces remain covered by `cargo check --workspace`, while
# current shared contracts are validated in actively maintained test suites
# (`yarm-ipc-abi` and `yarm-srv-common`). Control-plane unit tests should be
# rebuilt later against transport-only/current ABI seams.
test = false

[[bin]]
name = "init_server"
path = "src/bin/init_server.rs"
test = false

[[bin]]
name = "process_manager"
path = "src/bin/process_manager.rs"
test = false

[[bin]]
name = "supervisor"
path = "src/bin/supervisor.rs"
test = false

[[bin]]
name = "driver_manager"
path = "src/bin/driver_manager.rs"
test = false

[[bin]]
name = "vfs_server"
path = "src/bin/vfs_server.rs"
test = false
