# SPDX-License-Identifier: Apache-2.0

[package]
name = "yarm-server-runtime"
version = "0.1.0"
edition = "2024"

[features]
default = ["hosted-dev"]
hosted-dev = ["yarm/hosted-dev"]
posix-compat = ["yarm/posix-compat"]

[dependencies]
yarm = { path = "../..", default-features = false }
yarm-control-plane-servers = { path = "../yarm-control-plane-servers", default-features = false }
yarm-network-servers = { path = "../yarm-network-servers", default-features = false }
yarm-fs-servers = { path = "../yarm-fs-servers", default-features = false }
yarm-driver-servers = { path = "../yarm-driver-servers", default-features = false }
yarm-ui-servers = { path = "../yarm-ui-servers", default-features = false }
