# SPDX-License-Identifier: Apache-2.0

[package]
name = "yarm-server-runtime"
version = "0.1.0"
edition = "2024"

[features]
default = ["hosted-dev"]
hosted-dev = ["yarm/hosted-dev"]
posix-compat = ["yarm/posix-compat"]

[dependencies]
yarm = { path = "../..", default-features = false }
yarm-freestanding-alloc = { path = "../yarm-freestanding-alloc" }
