# SPDX-License-Identifier: Apache-2.0

[package]
name = "yarm-server-runtime"
version = "0.1.0"
edition = "2024"

[features]
default = ["hosted-dev"]
hosted-dev = []
posix-compat = []

[dependencies]
yarm-freestanding-alloc = { path = "../yarm-freestanding-alloc" }
yarm-ipc-abi = { path = "../yarm-ipc-abi" }
yarm-user-rt = { path = "../yarm-user-rt" }
