# SPDX-License-Identifier: Apache-2.0

[package]
name = "yarm-ui-servers"
version = "0.1.0"
edition = "2024"
autobins = false

[features]
default = ["hosted-dev"]
hosted-dev = []

[dependencies]
yarm-server-runtime = { path = "../yarm-server-runtime", default-features = false }
yarm-user-rt = { path = "../yarm-user-rt" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "compositor_srv"
path = "src/bin/compositor_srv.rs"
required-features = ["hosted-dev"]

[[bin]]
name = "display_srv"
path = "src/bin/display_srv.rs"
required-features = ["hosted-dev"]

[[bin]]
name = "shell_srv"
path = "src/bin/shell_srv.rs"
required-features = ["hosted-dev"]
